# Maelstrom

./: .gitignore  CMakeLists.txt  project-manifest.json
Data/UI/: main.xml
android/: .gitignore  README.md  build.gradle  setup.sh
android/app/: build.gradle  proguard-rules.pro
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/maelstrom/game/: MaelstromActivity.java
android/app/src/main/res/values/: colors.xml  styles.xml
game/: MaelstromUI.cpp  game.cpp  init.cpp  object.cpp  particles.cpp  particles.h  player.cpp  starfield.cpp  starfield.h
screenlib/: SDL_FrameBuf.cpp  SDL_FrameBuf.h
